# tiled-catalog-broker

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile.frontend  README.md  config.docker.yml  config.yml  docker-compose.yml  nginx.frontend.conf  pyproject.toml
.github/act/: pr-event.json  pr-fork-event.json
.github/workflows/: docker-amsc-connector.yml  tests.yml
amsc-connector/: .dockerignore  .env.example  .secrets.example  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
amsc-connector/scripts/: generate_env.sh  register_test_data.py
amsc-connector/src/amsc_connector/: __init__.py  main.py  worker.py
amsc-connector/src/amsc_connector/api/: __init__.py  deps.py
amsc-connector/src/amsc_connector/api/routes/: webhook.py
amsc-connector/src/amsc_connector/core/: _models.py  broker.py  config.py  constants.py  exceptions.py  models.py
amsc-connector/tests/: conftest.py  test_retry.py  test_shutdown.py  test_worker_integration.py
benchmark/: README.md  benchmark_analysis.ipynb  benchmark_runner.py  generate_data.py  schema_a.sql  schema_b.sql  schema_c.sql  schema_d.sql
datasets/: draft_initial_data_proper.yml  draft_nips3_multimodal.yml  draft_schema_v1.yml  edrixs_sbi.yml  nips3_multimodal.yml  nips3_multimodal_v2.yml  sam_klein.yml  sunny_10k.yml  tmo101633026_mrco.yml  vdp_multimodal.yml  zhantao_method_a_v2.yml  zhantao_method_b.yml  zhantao_method_b_v2.yml  zhantao_method_b_v3.yml  zhantao_method_c.yml  zhantao_method_c_v2.yml  zhantao_method_d.yml  zhantao_method_d_v2.yml  zhantao_method_d_v3.yml  zhantao_method_d_v4.yml  zhantao_method_d_v5.yml
docs/: FUTURE_PLANS.md  INGESTION-GUIDE.md  SCHEMA-DESIGN.md
docs/agents/: plan.md  progress.md
examples/: demo_dual_mode.py  demo_ins_dataset_with_query.py  demo_mh_dataset.py  demo_mh_dataset_with_query.py  demo_onboarding.py  demo_query.py  explore.py  mrco_demo.py
logs/method_a/: notes.md
logs/method_b/: notes.md
logs/method_c/: notes.md
logs/method_d/: notes.md
notebooks/: demo_onboarding.py
scripts/: gen_zhantao_method_c.py
src/data_catalog_service/: catalog.py  cli.py  config.py  generate.py  http_register.py  inspect.py  query_manifest.py  register.py  utils.py
src/tiled_catalog_broker/: bulk_register.py  catalog.py  cli.py  config.py  delete.py  http_register.py  query_manifest.py  register.py  schema.py  test_tiled_cache.py  (+2 more)
tests/: conftest.py  test_cli.py  test_config.py  test_data_retrieval.py  test_delete.py  test_generate.py  test_generic_registration.py  test_inspect.py  test_registration.py  test_registration_helpers.py  test_schema.py  test_tiled_cache.py  test_utils.py
tiled_catalog_broker/: README.md  config.yml  demo_onboarding.py  generate.py  ingest.py  pyproject.toml  register.py
tiled_catalog_broker/broker/: bulk_register.py  catalog.py  cli.py  config.py  generate.py  http_register.py  inspect.py  schema.py  utils.py
tiled_catalog_broker/datasets/: edrixs_sbi.yml
tiled_catalog_broker/demo/: config.yml
tiled_catalog_broker/demo/datasets/: edrixs.yml  multimodal.yml  vdp.yml
tiled_catalog_broker/examples/: demo_dual_mode.py  demo_ins_dataset_with_query.py  demo_mh_dataset.py  demo_mh_dataset_with_query.py
tiled_catalog_broker/extra/: gen_edrixs_manifest.py  gen_multimodal_manifest.py  gen_vdp_manifest.py
tiled_catalog_broker/schema/: catalog_model.yml
tiled_catalog_broker/tests/: conftest.py  test_config.py  test_data_retrieval.py  test_generic_registration.py  test_registration.py  test_utils.py
tiled_catalog_broker/tests/testdata/vdp/: vdp_entities.parquet
tiled_catalog_broker/tests/testdata/vdp/artifacts/: aaaa0000_mh_powder_30T.h5  aaaa0002_gs_state.h5  aaaa0002_mh_powder_30T.h5
tiled_poc/: README.md  config.yml  pyproject.toml
tiled_poc/broker/: bulk_register.py  cli.py  config.py  http_register.py  query_manifest.py  test_tiled_cache.py  utils.py
tiled_poc/broker/adapters/: lazy_hdf5.py
tiled_poc/broker/onboarding/: __init__.py  generate.py  inspect.py
tiled_poc/broker/onboarding/schema/: __init__.py  catalog_model.yml
tiled_poc/examples/: demo_dual_mode.py  demo_ins_dataset_with_query.py  demo_mh_dataset.py  demo_mh_dataset_with_query.py
tiled_poc/tests/: conftest.py  test_config.py  test_data_retrieval.py  test_generic_registration.py  test_onboarding_generate.py  test_onboarding_inspect.py  test_onboarding_schema.py  test_utils.py
(+29 files in other folders)
