[project]
name = "data-catalog-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "h5py",
    "numpy",
    "ruamel.yaml",
    "canonicaljson",
    "sqlalchemy",
    "tiled[server]",
]

[project.scripts]
dcs = "data_catalog_service.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/data_catalog_service"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
