[project]
name = "tiled-catalog-broker"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "pyarrow",
    "h5py",
    "numpy",
    "ruamel.yaml",
    "canonicaljson",
    "sqlalchemy",
    "tiled[server]",
]

[project.scripts]
tcb = "tiled_catalog_broker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tiled_catalog_broker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
